# highlight-cuts

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
ai/: cv_tracking_discussion_summary.md  cv_tracking_implementation_plan.md  cv_tracking_prototype_plan.md  doc_instructions.md  initial_prompt.txt  instructions.md  session_summary.md
ai/future/: gui_distribution_plan.md  interactive_clip_editing.md  server_side_sheet_tracking.md  xfade_transitions.md
ai/notes/: docker_enabling.md
ai/session_summaries/: 2025-11-23_session_1.md  2025-11-23_session_2.md  2025-11-23_session_4.md  2025-11-24_session_3.md  2025-11-24_session_5.md  2025-11-26_session_6.md  2025-11-26_session_7.md  2025-11-26_session_8.md  2025-11-26_session_9.md  2025-11-27_session_1.md  2025-11-28_session_1.md  2025-11-28_session_2.md
docs/: CHANGELOG.md  FAQ.md  TROUBLESHOOTING.md  background.md  docker_setup.md  example_clips.csv  google_sheets.md  tech_stack.md  usage.md
docs/dev/: README.md  architecture.md  contributing.md  testing.md
docs/examples/: README.md  multi_game_season.csv  sample_clips.csv
docs/user/: README.md  faq.md  google_sheets.md  quickstart.md  usage.md  web_interface.md
output/: .sheet_cache.txt
spike/: README.md  __init__.py  bulk_test.py  cv_prototype.py  render_run_preview.py
spike/tests/: test_bulk_test_utils.py
src/highlight_cuts/: cache.py  cli.py  core.py  ffmpeg.py  utils.py  web.py
src/highlight_cuts/templates/: index.html
tests/: test_cache.py  test_cli.py  test_core.py  test_docker_config.py  test_ffmpeg.py  test_files_endpoint.py  test_integration.py  test_old_file_deletion.py  test_utils.py  test_web.py  test_web_comprehensive.py  test_web_endpoints.py  test_web_process_form.py
tests/config/: README.md  TROUBLESHOOTING.md  integration_test_config.yaml
tests/fixtures/: test_clips.csv
