[project]
name = "highlight-cuts"
version = "0.1.0"
description = "A CLI tool to slice sports game videos into player highlights using FFmpeg."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "pandas>=2.2.0",
    "requests>=2.31.0",
]

[project.scripts]
highlight-cuts = "highlight_cuts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/highlight_cuts"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]
