[project]
name = "highlight-cuts"
version = "0.1.0"
description = "A CLI tool to slice sports game videos into player highlights using FFmpeg."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "ultralytics>=8.3.233",
    "opencv-python>=4.12.0.88",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "pillow>=12.0.0",
    "lap>=0.5.12",
]

[project.scripts]
highlight-cuts = "highlight_cuts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/highlight_cuts"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "integration: marks tests that require integration resources (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]
